api: add statusList param
