# docs/swagger.json
@@ -275,7 +275,15 @@
                     "type": "integer"
                 },
                 "status": {
+                    "description": "ignore if statusList not empty",
                     "type": "integer"
+                },
+                "statusList": {
+                    "description": "{9 active 10 exited 20 pending 30 slash}",
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 }
             }
         },
@@ -378,8 +386,17 @@
         "info_handlers.RspNodeInfo": {
             "type": "object",
             "properties": {
+                "activeCount": {
+                    "type": "integer"
+                },
                 "ethPrice": {
                     "type": "number"
+                },
+                "exitedCount": {
+                    "type": "integer"
+                },
+                "pendingCount": {
+                    "type": "integer"
                 },
                 "pubkeyList": {
                     "type": "array",
@@ -392,6 +409,9 @@
                 },
                 "selfRewardEth": {
                     "type": "string"
+                },
+                "slashCount": {
+                    "type": "integer"
                 },
                 "totalCount": {
                     "type": "integer"
